# spliff

./: Cargo.toml  README.md  Rocket.toml  sample.env
api/: .gitignore  Cargo.toml
api/src/: main.rs  state.rs  token.rs
spliff-lib/: Cargo.toml
spliff-lib/src/: account.rs  errors.rs  lib.rs  state.rs  token.rs
src/: main.rs  state.rs  token.rs
